--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center p-8">
+<div *ngIf="clientId$ | async as clientId" class="flex flex-col items-center justify-center p-8">
   <div class="text-4xl mb-4">octodash</div>
   <div class="text-lg text-center mb-8">In order to access your GitHub account, we need your authorization first.</div>
   <a
