feat: add call to get user repos

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,1 @@
-<div *ngIf="user$ | async as user">
-  <h2>{{ user.login }}</h2>
-</div>
+<app-repo-table [repos]="repos$ | async"></app-repo-table>
