--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div class="h-screen w-screen p-4">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+</div>
